@@ -1,6 +1,7 @@
 1998-03-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile: Remove defines for Tk headers.
+	(XPIXMAP_{H,O}): Define conditionally on MACHTYPE vs i386-pc-cygwin32.
 
 	* internal.m: Include win32dib.h and Tk internal header files only
 	if _WIN32.  Include <misc.h>.
